--- a/onlineshop/src/main/resources/templates/profile.html
+++ b/onlineshop/src/main/resources/templates/profile.html
@@ -21,7 +21,8 @@
             <a class="profile-menu-link" th:href="@{/users/my-orders}">Моите поръчки</a>
             <a class="profile-menu-link" th:href="@{/users/my-addresses}">Моите адреси</a>
             <a class="profile-menu-link" th:href="@{/users/my-opinions}">Моите мнения</a>
-            <a class="profile-menu-link" th:href="@{/exchange-or-return}">Замяна или връщане</a>
+            <a class="profile-menu-link" th:href="@{/return-or-replacement}">Замяна или връщане</a>
+            <a class="profile-menu-link" th:href="@{/users/my-requests}">Моите заявки</a>
             <a class="profile-menu-link" th:href="@{/users/favourites}">Любими</a>
             <a class="profile-menu-link" th:href="@{/contacts}">Връзка с нас</a>
         </div>
@@ -32,6 +33,7 @@
             <a class="admin-menu-link" th:href="@{/promo-codes}">Промо кодове</a>
             <a class="admin-menu-link" th:href="@{/promo-codes/add-promo-code}">Добави промо код</a>
             <a class="admin-menu-link" th:href="@{/orders/all}">Всички поръчки</a>
+            <a class="admin-menu-link" th:href="@{/return-or-replacement/requests}">Заявки замяна/връщане</a>
         </div>
 
         <div class="main-profile-info">
