--- a/onlineshop/src/main/resources/templates/order-confirmation.html
+++ b/onlineshop/src/main/resources/templates/order-confirmation.html
@@ -92,14 +92,14 @@
                     <label>Тип адрес</label>
 
                     <div class="radio-buttons">
-                        <div>
+                        <div class="radio-button">
                             <input type="radio"
                                    th:field="*{addressType}"
                                    th:value="OFFICE"
                                    id="officeOption" />
                             <label for="officeOption">Офис на Еконт</label>
                         </div>
-                        <div>
+                        <div class="radio-button">
                             <input type="radio"
                                    th:field="*{addressType}"
                                    th:value="PERSONAL"
