Fixed bug with comment deletion when the logged user is admin

--- a/onlineshop/src/main/resources/templates/opinions.html
+++ b/onlineshop/src/main/resources/templates/opinions.html
@@ -50,6 +50,7 @@
                           th:method="DELETE"
                           sec:authorize="isAuthenticated()"
                           th:if="${opinion.isCanDelete()}">
+                        <input th:if="${isUserPage}" type="hidden" name="source" value="userPage">
                         <button type="submit">Изтрий</button>
                     </form>
                 </div>
