--- a/onlineshop/src/main/resources/static/css/index-styles.css
+++ b/onlineshop/src/main/resources/static/css/index-styles.css
@@ -72,7 +72,7 @@ main .site-main-section .choose-your-size .article-main input[type="range"]::-we
     appearance: none;
     width: 30px;
     height: 30px;
-    background-image: url('/images/shoe-icon.png');
+    background-image: url('/images/index/shoe-icon.png');
     background-size: contain;
     background-position: center center;
     background-repeat: no-repeat;
