Fixed bug to be shown only products with quantity in stock more than 0

--- a/onlineshop/src/main/resources/static/css/product-details-styles.css
+++ b/onlineshop/src/main/resources/static/css/product-details-styles.css
@@ -1,7 +1,11 @@
-main {
+main .main-content {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+}
+
+main .messages {
+    width: 100%;
 }
 
 main .image-container {
